--- a/en/contact.html
+++ b/en/contact.html
@@ -6,7 +6,68 @@
 <title>Contacts — Anastasia</title>
 <meta name="description" content="Contacts: Instagram, Telegram, Email.">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
-<!-- Возьми тот же CSS из RU contact.html, только заголовок оставь слева -->
+<style>
+  :root{ --bg:#000; --text:#e9eaec; --muted:#9da0a6; --edge:#171717; }
+  *{ box-sizing:border-box }
+  html{ scroll-behavior:smooth }
+  body{
+    margin:0; background:var(--bg); color:var(--text);
+    font-family: Inter, system-ui, -apple-system, Arial, sans-serif;
+  }
+
+  /* Заголовок слева */
+  h2{
+    font-weight:800; letter-spacing:-.01em;
+    font-size:clamp(22px,3.2vw,36px); margin:0;
+    text-align:left;
+  }
+
+  /* Мини-меню слева снизу */
+  .minimenu{
+    position:fixed; left:14px; bottom:14px; z-index:30;
+    display:flex; flex-direction:column; gap:6px;
+    font-size:12px; letter-spacing:.08em;
+    background:rgba(0,0,0,.5); backdrop-filter:blur(6px);
+    padding:8px 10px; border-radius:10px; border:1px solid #111;
+  }
+  .minimenu a{ color:#cfcfd4; text-decoration:none }
+
+  /* RU/ENG справа снизу — размер как у мини-меню */
+  .langswitch{
+    position:fixed; right:14px; bottom:14px; z-index:30;
+    display:flex; gap:10px;
+    font-size:12px; letter-spacing:.08em;
+    background:rgba(0,0,0,.5); backdrop-filter:blur(6px);
+    padding:8px 10px; border-radius:10px; border:1px solid #111;
+  }
+  .langswitch button{
+    appearance:none; background:transparent; border:none; color:#cfcfd4;
+    cursor:pointer; padding:0 2px; font:inherit; opacity:.8; text-transform:uppercase;
+  }
+  .langswitch button.active{ opacity:1; color:#fff; text-decoration:underline; text-underline-offset:3px }
+
+  /* Контент */
+  .wrap{ padding:64px 24px 110px; max-width:900px; margin:0 auto; }
+  .contacts{ display:flex; flex-direction:column; align-items:center; gap:18px; margin-top:8vh; }
+  .contact-row{
+    display:flex; align-items:center; gap:12px;
+    font-family: Raleway, Inter, system-ui, -apple-system, Arial, sans-serif;
+  }
+  .icon{ width:22px; height:22px; display:inline-block }
+  .handle a{ color:#e9eaec; text-decoration:none; font-weight:600; font-size:18px }
+
+  /* Слоган по центру и ниже */
+  .slogan-box{ margin-top:12vh; display:grid; place-items:center; text-align:center; }
+  .contact-slogan{
+    white-space:nowrap; font-weight:600; letter-spacing:.01em; color:#cfd1d6;
+    font-family: Raleway, Inter, system-ui, -apple-system, Arial, sans-serif;
+  }
+
+  .foot{
+    padding:30px 24px; border-top:1px solid var(--edge);
+    color:#8c8d91; text-align:center; font-size:12px;
+  }
+</style>
 </head>
 <body>
 
@@ -14,13 +75,50 @@
   <h2>Contacts</h2>
 
   <div class="contacts">
+    <!-- Instagram @imnotdiller -->
     <div class="contact-row">
-      <!-- те же SVG и ссылки, тексты не меняем: это хэндлы -->
+      <span class="icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="none" width="22" height="22" xmlns="http://www.w3.org/2000/svg">
+          <rect x="3" y="3" width="18" height="18" rx="5" stroke="#e9eaec" stroke-width="1.5"/>
+          <circle cx="12" cy="12" r="4" stroke="#e9eaec" stroke-width="1.5"/>
+          <circle cx="17.5" cy="6.5" r="1" fill="#e9eaec"/>
+        </svg>
+      </span>
       <span class="handle"><a href="https://www.instagram.com/imnotdiller" target="_blank" rel="noopener">@imnotdiller</a></span>
     </div>
-    <div class="contact-row"><span class="handle"><a href="https://www.instagram.com/nadobroart_neuro" target="_blank" rel="noopener">@nadobroart_neuro</a></span></div>
-    <div class="contact-row"><span class="handle"><a href="https://t.me/nadobroart_neuro" target="_blank" rel="noopener">@nadobroart_neuro</a></span></div>
-    <div class="contact-row"><span class="handle"><a href="mailto:nadobroart@gmail.com">nadobroart@gmail.com</a></span></div>
+
+    <!-- Instagram @nadobroart_neuro -->
+    <div class="contact-row">
+      <span class="icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="none" width="22" height="22" xmlns="http://www.w3.org/2000/svg">
+          <rect x="3" y="3" width="18" height="18" rx="5" stroke="#e9eaec" stroke-width="1.5"/>
+          <circle cx="12" cy="12" r="4" stroke="#e9eaec" stroke-width="1.5"/>
+          <circle cx="17.5" cy="6.5" r="1" fill="#e9eaec"/>
+        </svg>
+      </span>
+      <span class="handle"><a href="https://www.instagram.com/nadobroart_neuro" target="_blank" rel="noopener">@nadobroart_neuro</a></span>
+    </div>
+
+    <!-- Telegram group -->
+    <div class="contact-row">
+      <span class="icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="none" width="22" height="22" xmlns="http://www.w3.org/2000/svg">
+          <path d="M21 5L3 12l6 2 8-8-6 10v3l3-2" stroke="#e9eaec" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </span>
+      <span class="handle"><a href="https://t.me/nadobroart_neuro" target="_blank" rel="noopener">@nadobroart_neuro</a></span>
+    </div>
+
+    <!-- Email -->
+    <div class="contact-row">
+      <span class="icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="none" width="22" height="22" xmlns="http://www.w3.org/2000/svg">
+          <path d="M4 6h16v12H4z" stroke="#e9eaec" stroke-width="1.5"/>
+          <path d="M4 7l8 6 8-6" stroke="#e9eaec" stroke-width="1.5" stroke-linecap="round"/>
+        </svg>
+      </span>
+      <span class="handle"><a href="mailto:nadobroart@gmail.com">nadobroart@gmail.com</a></span>
+    </div>
   </div>
 
   <div class="slogan-box">
@@ -28,22 +126,34 @@
   </div>
 </main>
 
+<!-- Мини-меню -->
 <nav class="minimenu" aria-label="Mini menu">
   <a href="about.html">about</a>
   <a href="contact.html">contacts</a>
   <a href="index.html">home</a>
 </nav>
+
+<!-- Переключатель языка -->
 <div class="langswitch" aria-label="Language">
   <button type="button" data-lang="ru">RU</button>/<button type="button" data-lang="en" class="active">ENG</button>
 </div>
 
-<footer class="foot"><small>© <span id="year"></span> Anastasia</small></footer>
+<footer class="foot">
+  <small>© <span id="year"></span> Anastasia</small>
+</footer>
 
 <script>
-  document.getElementById('year').textContent=new Date().getFullYear();
-  const btns=document.querySelectorAll('.langswitch [data-lang]'); const file=(location.pathname.split('/').pop()||'index.html');
-  const go=(lang)=>{ if(lang==='ru') location.href='../'+file; else location.href=file; };
-  btns.forEach(b=>b.addEventListener('click',()=>go(b.dataset.lang)));
+  // год
+  document.getElementById('year').textContent = new Date().getFullYear();
+
+  // Переключатель RU/ENG: просто ведёт между /en/* и корнем
+  const btns = document.querySelectorAll('.langswitch [data-lang]');
+  const file = (location.pathname.split('/').pop() || 'index.html');
+  const go = (lang)=>{
+    if(lang==='ru') location.href = '../'+file;   // на русскую страницу
+    else            location.href = file;         // остаёмся на EN
+  };
+  btns.forEach(b=> b.addEventListener('click', ()=> go(b.dataset.lang)));
 </script>
 </body>
 </html>
